--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .vagrant/*
-resources/*.gz
-resources/*.tgz
+resources/scala-2.11.6.tgz
+resources/apache-ant-1.9.5-bin.zip
+resources/apache-maven-3.2.5-bin.zip
+resources/jdk-7u76-linux-x64.tar.gz
